--- a/index.html
+++ b/index.html
@@ -5,8 +5,103 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bootstrap Freelancer</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
-    
+    <div class="container-fluid m-0 p-0 text-center">
+        <div class="row">
+            <div class="col-12 bg-info p-4">
+                <img src="./assets/img/undraw_profile_pic_ic5t.svg" class="img-fluid rounded-circle" alt="Photo">
+                <h3>
+                    Pinco Pallino
+                </h3>
+                <h5>
+                    Web Developer
+                </h5>
+            </div>
+        </div>
+
+        <div class="row m-4">
+            <h4>
+                PORTFOLIO
+            </h4>
+            <div class="col-4 mb-4">
+                <div class="card border">
+                    <img src="./assets/img/portfolio/cabin.png" class="card-img-top" alt="Cabin">
+                    <h5 class="card-title fw-bold mt-2">
+                        Cabin Website
+                    </h5>
+                    <div class="d-grid gap-2 d-md-block mb-3">
+                        <button class="btn btn-outline-info me-md-2 text-nowrap" type="button">Preview</button>
+                        <button class="btn btn-info text-nowrap" type="button">Visit</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-4 mb-4">
+                <div class="card border">
+                    <img src="./assets/img/portfolio/cabin.png" class="card-img-top" alt="Cabin">
+                    <h5 class="card-title fw-bold mt-2">
+                        Cabin Website
+                    </h5>
+                    <div class="d-grid gap-2 d-md-block mb-3">
+                        <button class="btn btn-outline-info me-md-2 text-nowrap" type="button">Preview</button>
+                        <button class="btn btn-info text-nowrap" type="button">Visit</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-4 mb-4">
+                <div class="card border">
+                    <img src="./assets/img/portfolio/cabin.png" class="card-img-top" alt="Cabin">
+                    <h5 class="card-title fw-bold mt-2">
+                        Cabin Website
+                    </h5>
+                    <div class="d-grid gap-2 d-md-block mb-3">
+                        <button class="btn btn-outline-info me-md-2 text-nowrap" type="button">Preview</button>
+                        <button class="btn btn-info text-nowrap" type="button">Visit</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-4 mb-4">
+                <div class="card border">
+                    <img src="./assets/img/portfolio/cabin.png" class="card-img-top" alt="Cabin">
+                    <h5 class="card-title fw-bold mt-2">
+                        Cabin Website
+                    </h5>
+                    <div class="d-grid gap-2 d-md-block mb-3">
+                        <button class="btn btn-outline-info me-md-2 text-nowrap" type="button">Preview</button>
+                        <button class="btn btn-info text-nowrap" type="button">Visit</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-4 mb-4">
+                <div class="card border">
+                    <img src="./assets/img/portfolio/cabin.png" class="card-img-top" alt="Cabin">
+                    <h5 class="card-title fw-bold mt-2">
+                        Cabin Website
+                    </h5>
+                    <div class="d-grid gap-2 d-md-block mb-3">
+                        <button class="btn btn-outline-info me-md-2 text-nowrap" type="button">Preview</button>
+                        <button class="btn btn-info text-nowrap" type="button">Visit</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-4 mb-4">
+                <div class="card border">
+                    <img src="./assets/img/portfolio/cabin.png" class="card-img-top" alt="Cabin">
+                    <h5 class="card-title fw-bold mt-2">
+                        Cabin Website
+                    </h5>
+                    <div class="d-grid gap-2 d-md-block mb-3">
+                        <button class="btn btn-outline-info me-md-2 text-nowrap" type="button">Preview</button>
+                        <button class="btn btn-info text-nowrap" type="button">Visit</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
