--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container-fluid m-0 p-0 text-center">
         <div class="row">
             <div class="col-12 bg-info p-4">
-                <img src="./assets/img/undraw_profile_pic_ic5t.svg" class="img-fluid rounded-circle" alt="Photo">
+                <img src="./assets/img/undraw_profile_pic_ic5t.svg" class="img-fluid rounded-circle border border-info" alt="Photo">
                 <h3>
                     Pinco Pallino
                 </h3>
@@ -32,8 +32,8 @@
                         Cabin Website
                     </h5>
                     <div class="d-grid gap-2 d-md-block mb-3">
-                        <button class="btn btn-outline-info me-md-2 text-nowrap" type="button">Preview</button>
-                        <button class="btn btn-info text-nowrap" type="button">Visit</button>
+                        <button class="btn btn-info text-nowrap" type="button">Preview</button>
+                        <button class="btn btn-outline-info me-md-2 text-nowrap" type="button">Visit site</button>
                     </div>
                 </div>
             </div>
@@ -45,8 +45,8 @@
                         Cabin Website
                     </h5>
                     <div class="d-grid gap-2 d-md-block mb-3">
-                        <button class="btn btn-outline-info me-md-2 text-nowrap" type="button">Preview</button>
-                        <button class="btn btn-info text-nowrap" type="button">Visit</button>
+                        <button class="btn btn-info text-nowrap" type="button">Preview</button>
+                        <button class="btn btn-outline-info me-md-2 text-nowrap" type="button">Visit site</button>
                     </div>
                 </div>
             </div>
@@ -58,8 +58,8 @@
                         Cabin Website
                     </h5>
                     <div class="d-grid gap-2 d-md-block mb-3">
-                        <button class="btn btn-outline-info me-md-2 text-nowrap" type="button">Preview</button>
-                        <button class="btn btn-info text-nowrap" type="button">Visit</button>
+                        <button class="btn btn-info text-nowrap" type="button">Preview</button>
+                        <button class="btn btn-outline-info me-md-2 text-nowrap" type="button">Visit site</button>
                     </div>
                 </div>
             </div>
@@ -70,8 +70,8 @@
                         Cabin Website
                     </h5>
                     <div class="d-grid gap-2 d-md-block mb-3">
-                        <button class="btn btn-outline-info me-md-2 text-nowrap" type="button">Preview</button>
-                        <button class="btn btn-info text-nowrap" type="button">Visit</button>
+                        <button class="btn btn-info text-nowrap" type="button">Preview</button>
+                        <button class="btn btn-outline-info me-md-2 text-nowrap" type="button">Visit site</button>
                     </div>
                 </div>
             </div>
@@ -82,8 +82,8 @@
                         Cabin Website
                     </h5>
                     <div class="d-grid gap-2 d-md-block mb-3">
-                        <button class="btn btn-outline-info me-md-2 text-nowrap" type="button">Preview</button>
-                        <button class="btn btn-info text-nowrap" type="button">Visit</button>
+                        <button class="btn btn-info text-nowrap" type="button">Preview</button>
+                        <button class="btn btn-outline-info me-md-2 text-nowrap" type="button">Visit site</button>
                     </div>
                 </div>
             </div>
@@ -94,8 +94,8 @@
                         Cabin Website
                     </h5>
                     <div class="d-grid gap-2 d-md-block mb-3">
-                        <button class="btn btn-outline-info me-md-2 text-nowrap" type="button">Preview</button>
-                        <button class="btn btn-info text-nowrap" type="button">Visit</button>
+                        <button class="btn btn-info text-nowrap" type="button">Preview</button>
+                        <button class="btn btn-outline-info me-md-2 text-nowrap" type="button">Visit site</button>
                     </div>
                 </div>
             </div>
@@ -105,44 +105,63 @@
             <h3>Want an offer?</h3>
             <form class="row g-3 justify-content-start text-start">
                 <div class="col-md-6">
-                  <label for="inputEmail4" class="form-label">Email</label>
-                  <input type="email" class="form-control" id="inputEmail4">
+                  <label for="inputName" class="form-label">First Name</label>
+                  <input type="text" class="form-control" id="inputName">
                 </div>
                 <div class="col-md-6">
-                  <label for="inputPassword4" class="form-label">Password</label>
-                  <input type="password" class="form-control" id="inputPassword4">
+                  <label for="inputSurname" class="form-label">Last Name</label>
+                  <input type="text" class="form-control" id="inputSurname">
                 </div>
                 <div class="col-6">
-                  <label for="inputAddress" class="form-label">Address</label>
-                  <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+                  <label for="inputEmail" class="form-label">E-Mail Address</label>
+                  <input type="email" class="form-control" id="inputEmail" placeholder="your@email.com">
                 </div>
                 <div class="col-6">
-                  <label for="inputAddress2" class="form-label">Address 2</label>
-                  <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
+                  <label for="inputHours" class="form-label">Hours of Work</label>
+                  <input type="text" class="form-control" id="inputHours" placeholder="1 Hour">
                 </div>
                 <div class="col-md-6">
-                  <label for="inputCity" class="form-label">City</label>
-                  <input type="text" class="form-control" id="inputCity">
+                    <label for="inputState" class="form-label">Type of Work</label>
+                    <select id="inputState" class="form-select">
+                      <option selected>Back-end Developer</option>
+                      <option>Front-end Developer</option>
+                      <option>Project Analysis</option>
+                    </select>
                 </div>
                 <div class="col-md-6">
-                  <label for="inputState" class="form-label">State</label>
-                  <select id="inputState" class="form-select">
-                    <option selected>Choose...</option>
-                    <option>...</option>
-                  </select>
+                  <label for="inputDiscount" class="form-label">Discount Code</label>
+                  <input type="text" class="form-control" id="inputDiscount">
                 </div>
                 <div class="col-12">
-                    <label for="inputCity" class="form-label">City</label>
-                    <input type="text" class="form-control" id="inputCity">
-                  </div>
+                    <label for="inputMessage" class="form-label">Message</label>
+                    <textarea class="form-control" id="inputMessage" rows="3" placeholder="Enter your message here..."></textarea>
                 </div>
-                <div class="col-12">
-                  <button type="submit" class="btn btn-primary">Sign in</button>
+                <div class="col-12 text-center">
+                  <button type="submit" class="btn btn-warning"><strong>Send</strong></button>
                 </div>
             </form>
-            <h4>
+            <h4 class="text-start">
                 Il prezzo finale è 200€.
             </h4>
+        </div>
+
+        <div class="row text-white-50 bg-secondary text-center">
+            <div class="col-12 my-3">
+                <h3>LOCATION</h3>
+            </div>
+            <div class="col-12 m-1">
+                <h5>
+                    2215 John Daniel Drive
+                </h5>
+                <h5>
+                    Clark, MO 12345
+                </h5>
+            </div>
+            <div class="col-12 p-4">
+                <h6>
+                    Copyright &#169; Your Website 2022
+                </h6>
+            </div>
         </div>
     </div>
 
