--- a/index.html
+++ b/index.html
@@ -10,22 +10,22 @@
 <body>
     <div class="container-fluid m-0 p-0 text-center">
         <div class="row">
-            <div class="col-12 bg-info p-4">
+            <div class="col-12 bg-info p-5">
                 <img src="./assets/img/undraw_profile_pic_ic5t.svg" class="img-fluid rounded-circle border border-info" alt="Photo">
-                <h3>
+                <h1 class="my-2">
                     Pinco Pallino
-                </h3>
-                <h5>
-                    Web Developer
-                </h5>
+                </h1>
+                <h6 class="mb-2">
+                    WEB DESIGNER
+                </h6>
             </div>
         </div>
 
         <div class="row m-4">
-            <h4>
+            <h4 class="pb-3">
                 PORTFOLIO
             </h4>
-            <div class="col-4 mb-4">
+            <div class="col-sm-6 col-lg-4 mb-5">
                 <div class="card border">
                     <img src="./assets/img/portfolio/cabin.png" class="card-img-top" alt="Cabin">
                     <h5 class="card-title fw-bold mt-2">
@@ -38,11 +38,11 @@
                 </div>
             </div>
 
-            <div class="col-4 mb-4">
+            <div class="col-sm-6 col-lg-4 mb-5">
                 <div class="card border">
-                    <img src="./assets/img/portfolio/cabin.png" class="card-img-top" alt="Cabin">
+                    <img src="./assets/img/portfolio/cake.png" class="card-img-top" alt="Cabin">
                     <h5 class="card-title fw-bold mt-2">
-                        Cabin Website
+                        Cake Website
                     </h5>
                     <div class="d-grid gap-2 d-md-block mb-3">
                         <button class="btn btn-info text-nowrap" type="button">Preview</button>
@@ -51,11 +51,12 @@
                 </div>
             </div>
 
-            <div class="col-4 mb-4">
+
+            <div class="col-sm-6 col-lg-4 mb-5">
                 <div class="card border">
-                    <img src="./assets/img/portfolio/cabin.png" class="card-img-top" alt="Cabin">
+                    <img src="./assets/img/portfolio/circus.png" class="card-img-top" alt="Cabin">
                     <h5 class="card-title fw-bold mt-2">
-                        Cabin Website
+                        Circus Website
                     </h5>
                     <div class="d-grid gap-2 d-md-block mb-3">
                         <button class="btn btn-info text-nowrap" type="button">Preview</button>
@@ -63,11 +64,13 @@
                     </div>
                 </div>
             </div>
-            <div class="col-4 mb-4">
+
+
+            <div class="col-sm-6 col-lg-4 mb-5">
                 <div class="card border">
-                    <img src="./assets/img/portfolio/cabin.png" class="card-img-top" alt="Cabin">
+                    <img src="./assets/img/portfolio/game.png" class="card-img-top" alt="Cabin">
                     <h5 class="card-title fw-bold mt-2">
-                        Cabin Website
+                        Game Website
                     </h5>
                     <div class="d-grid gap-2 d-md-block mb-3">
                         <button class="btn btn-info text-nowrap" type="button">Preview</button>
@@ -75,11 +78,13 @@
                     </div>
                 </div>
             </div>
-            <div class="col-4 mb-4">
+
+
+            <div class="col-sm-6 col-lg-4 mb-5">
                 <div class="card border">
-                    <img src="./assets/img/portfolio/cabin.png" class="card-img-top" alt="Cabin">
+                    <img src="./assets/img/portfolio/safe.png" class="card-img-top" alt="Cabin">
                     <h5 class="card-title fw-bold mt-2">
-                        Cabin Website
+                        Safe Website
                     </h5>
                     <div class="d-grid gap-2 d-md-block mb-3">
                         <button class="btn btn-info text-nowrap" type="button">Preview</button>
@@ -87,11 +92,13 @@
                     </div>
                 </div>
             </div>
-            <div class="col-4 mb-4">
+
+
+            <div class="col-sm-6 col-lg-4 mb-5">
                 <div class="card border">
-                    <img src="./assets/img/portfolio/cabin.png" class="card-img-top" alt="Cabin">
+                    <img src="./assets/img/portfolio/submarine.png" class="card-img-top" alt="Cabin">
                     <h5 class="card-title fw-bold mt-2">
-                        Cabin Website
+                        Marine Website
                     </h5>
                     <div class="d-grid gap-2 d-md-block mb-3">
                         <button class="btn btn-info text-nowrap" type="button">Preview</button>
@@ -104,23 +111,23 @@
         <div class="bg-info p-3">
             <h3>Want an offer?</h3>
             <form class="row g-3 justify-content-start text-start">
-                <div class="col-md-6">
+                <div class="col-sm-6">
                   <label for="inputName" class="form-label">First Name</label>
                   <input type="text" class="form-control" id="inputName">
                 </div>
-                <div class="col-md-6">
+                <div class="col-sm-6">
                   <label for="inputSurname" class="form-label">Last Name</label>
                   <input type="text" class="form-control" id="inputSurname">
                 </div>
-                <div class="col-6">
+                <div class="col-sm-6">
                   <label for="inputEmail" class="form-label">E-Mail Address</label>
                   <input type="email" class="form-control" id="inputEmail" placeholder="your@email.com">
                 </div>
-                <div class="col-6">
+                <div class="col-sm-6">
                   <label for="inputHours" class="form-label">Hours of Work</label>
                   <input type="text" class="form-control" id="inputHours" placeholder="1 Hour">
                 </div>
-                <div class="col-md-6">
+                <div class="col-sm-6">
                     <label for="inputState" class="form-label">Type of Work</label>
                     <select id="inputState" class="form-select">
                       <option selected>Back-end Developer</option>
@@ -128,7 +135,7 @@
                       <option>Project Analysis</option>
                     </select>
                 </div>
-                <div class="col-md-6">
+                <div class="col-sm-6">
                   <label for="inputDiscount" class="form-label">Discount Code</label>
                   <input type="text" class="form-control" id="inputDiscount">
                 </div>
@@ -136,12 +143,12 @@
                     <label for="inputMessage" class="form-label">Message</label>
                     <textarea class="form-control" id="inputMessage" rows="3" placeholder="Enter your message here..."></textarea>
                 </div>
-                <div class="col-12 text-center">
+                <div class="col-12 text-center my-4">
                   <button type="submit" class="btn btn-warning"><strong>Send</strong></button>
                 </div>
             </form>
-            <h4 class="text-start">
-                Il prezzo finale è 200€.
+            <h4 class="text-start mb-4">
+                Il prezzo finale è di: 200.75€.
             </h4>
         </div>
 
